--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,13 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.3",
+        "filament/widgets": "^3.3",
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.9",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/telescope": "^5.9",
+        "laravel/tinker": "^2.10.1",
+        "spatie/pdf-to-text": "^1.54"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
