--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.0",
+        "tailwindcss": "3",
         "vite": "^6.2.4"
     },
     "dependencies": {
-        "chokidar": "^4.0.3"
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.16",
+        "autoprefixer": "^10.4.21",
+        "chartjs-plugin-datalabels": "^2.2.0",
+        "chokidar": "^4.0.3",
+        "postcss": "^8.5.4",
+        "postcss-nesting": "^13.0.1"
     }
 }
