--- a/.docker/app/site.conf
+++ b/.docker/app/site.conf
@@ -4,118 +4,26 @@ map $http_upgrade $connection_upgrade {
 }
 
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
+    listen 80;
+    listen [::]:80;
     server_name _;
-
-    location /up {
-        proxy_pass http://127.0.0.1:8000/up;
-    }
-
-    location / {
-        return 444;
-    }
-}
-
-server {
-    listen 80;
-    listen [::]:80;
-    server_name www.corperland.ng www.corperland.com corperland.com;
-    root /var/www/public;
-
-    location / {
-        return 301 https://corperland.ng$request_uri;
-    }
-}
-
-server {
-    listen 80;
-    listen [::]:80;
-    server_name ~^(?<subdomain>.+)\.corperland\.com$;
-    root /var/www/public;
-
-    location / {
-        return 301 https://$subdomain.corperland.ng$request_uri;
-    }
-}
-
-server {
-    listen 80;
-    listen [::]:80;
-    server_name .corperland.ng .localhost;
     server_tokens off;
-    root /var/www/public;
 
-    index index.php;
+    include /etc/nginx/common.conf;
+}
 
-    charset utf-8;
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
+    server_name _;
+    server_tokens off;
 
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-Content-Type-Options "nosniff";
+    ssl_certificate /etc/letsencrypt/live/domain.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/domain.com/privkey.pem;
 
-    client_max_body_size 6M;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
 
-    set $cors "false";
-    if ($http_origin ~* ^https?://((?:[\w-]+\.)*corperland\.ng|(?:[\w-]+\.)*localhost(?::\d+)?|localhost(?::\d+)?)$) {
-        set $cors "true";
-    }
-
-    location /index.php {
-        try_files /not_exists @octane;
-    }
-
-    location ~* ^/(build|js|css|vendor)/.*\.(css|js)$ {
-         if ($cors = "true") {
-            add_header 'Access-Control-Allow-Origin' "$http_origin" always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
-        }
-
-        if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' "$http_origin" always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
-            add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Type' 'text/plain charset=UTF-8';
-            add_header 'Content-Length' 0;
-            return 204;
-        }
-
-        try_files $uri $uri/ =404;
-    }
-
-    location / {
-        try_files $uri $uri/ @octane;
-    }
-
-    location = /favicon.ico { access_log off; log_not_found off; }
-    location = /robots.txt  { access_log off; log_not_found off; }
-
-    access_log off;
-    error_log  /var/log/nginx/domain.com-error.log error;
-
-    error_page 404 /index.php;
-
-    location @octane {
-        set $suffix "";
-
-        if ($uri = /index.php) {
-            set $suffix ?$query_string;
-        }
-
-        proxy_http_version 1.1;
-        proxy_set_header Host $http_host;
-        proxy_set_header Scheme $scheme;
-        proxy_set_header SERVER_PORT $server_port;
-        proxy_set_header REMOTE_ADDR $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-
-        proxy_pass http://127.0.0.1:8000$suffix;
-    }
-
-    location ~ /\.(?!well-known).* {
-        deny all;
-    }
+    include /etc/nginx/common.conf;
 }
