--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,13 @@ services:
             dockerfile: Dockerfile
         ports:
             - ${EXPOSED_APP_PORT:-80}:80
+            - ${EXPOSED_APP_HTTPS_PORT:-443}:443
         volumes:
             - .:/var/www
             - .docker/php/php.ini:/usr/local/etc/php/php.ini
             - .docker/app/supervisord.conf:/etc/supervisor/conf.d/supervisord.conf
             - .docker/app/site.conf:/etc/nginx/http.d/default.conf
+            - .docker/app/common.conf:/etc/nginx/common.conf
             - .docker/nginx.conf:/etc/nginx/nginx.conf
         networks:
             - app
