--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
-APP_NAME=Laravel
+EXPOSED_APP_PORT=80
+EXPOSED_DB_PORT=3306
+EXPOSED_REDIS_PORT=6379
+EXPOSED_MAILPIT_PORT=1025
+EXPOSED_MAILPIT_DASHBOARD_PORT=8025
+EXPOSED_APP_HTTPS_PORT=
+APP_NAME="Clause Clarity"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -20,12 +26,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=db
+DB_PORT=3306
+DB_DATABASE=app
+DB_USERNAME=app
+DB_PASSWORD=password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -47,10 +53,10 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
+MAIL_MAILER=smtp
 MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
+MAIL_HOST=mailpit
+MAIL_PORT=1029
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
@@ -63,4 +69,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+OCTANE_SERVER=swoole
 OPENAI_API_KEY=
+
+EMAIL_FORWADING_DOMAIN=
